--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/*h1 {
-    font-size: 60px;
-    margin-left: 50%;
-}*/
-
 .main-header {
     font-size: 40px;
     display: flex;
@@ -11,3 +6,22 @@
     height: 200px;
     border: 1px solid #ccc; /* Remember to delete */
   }
+
+.info-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.info-table th, .info-table td {
+    border: 2px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.info-table th {
+    background-color: #f2f2f2;
+}
