--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
-.main-header {
-    font-size: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    border: 1px solid #ccc; /* Remember to delete */
-  }
+body {
+    font-family: 'lato', sans-serif;
+}
+
+.container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+h2 {
+    font-size: 26px;
+    margin: 20px 0;
+    text-align: center;
+
+    small {
+        font-size: 0.5em;
+    }
+}
 
 .info-table {
     width: 100%;
@@ -13,12 +26,11 @@
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .info-table th, .info-table td {
     border: 2px solid #dddddd;
-    text-align: left;
+    text-align: center; /* Center align content in all columns */
     padding: 8px;
 }
 
@@ -28,4 +40,85 @@
 
 .error {
     color: red;
+}
+
+.main-header {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    border: 1px solid #ccc; /* Remember to delete */
+}
+
+.responsive-table {
+    li {
+        border-radius: 3px;
+        padding: 25px 30px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 25px;
+    }
+
+    .table-header {
+        background-color: #95A5A6;
+        font-size: 14px;
+        text-transform: uppercase;
+        letter-spacing: 0.03em;
+        text-align: center; /* Center align content in all columns */
+    }
+
+    .table-row {
+        background-color: #ffffff;
+        box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+    }
+
+    .col-1{
+        flex-basis: 15%;
+        text-align: center; /* Center align content in all columns */
+    }
+    .col-2{
+        flex-basis: 25%;
+        text-align: center; /* Center align content in all columns */
+
+    }
+    .col-3{
+        flex-basis: 25%;
+        text-align: center; /* Center align content in all columns */
+
+    }
+    .col-4 {
+        flex-basis: 25%;
+        text-align: center; /* Center align content in all columns */
+    }
+
+    @media all and (max-width: 767px) {
+        .table-header {
+            display: none;
+        }
+        .table-row {}
+
+        li {
+            display: block;
+        }
+
+        .col {
+            text-align: center;
+            flex-basis: 100%;
+        }
+
+        .col {
+            display: flex;
+            padding: 10px 0;
+            text-align: center;
+
+            &:before {
+                color: #6C7A89;
+                padding-right: 10px;
+                content: attr(data-label);
+                flex-basis: 50%;
+                text-align: center;
+            }
+        }
+    }
 }
