--- a/style.css
+++ b/style.css
@@ -115,3 +115,95 @@ h2 {
         }
     }
 }
+.responsive-table-admin {
+    li {
+        border-radius: 3px;
+        padding: 15px 30px;
+        display: flex; /* Center vertically within row */
+        justify-content: space-between;
+        align-items: center; /* Center vertically within row */
+        margin-bottom: 25px;
+    }
+
+    .table-header {
+        background-color: #95A5A6;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 0.03em;
+        text-align: center; /* Center align content in all columns */
+        padding: 22px 0;
+        flex-basis: 40%;
+    }
+
+    .table-row {
+        background-color: #ffffff;
+        box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+    }
+
+    .col-0{
+        flex-basis: 10%;
+        text-align: center; /* Center align content in all columns */
+        margin: 0 auto; /* Center horizontally */
+        font-size: 20px;
+    }
+    .col-1{
+        flex-basis: 20%;
+        text-align: center; /* Center align content in all columns */
+        margin: 0 auto; /* Center horizontally */
+        font-size: 20px;
+    }
+
+    }
+    .col-2{
+        flex-basis: 20%;
+        text-align: center; /* Center align content in all columns */
+        margin: 0 auto; /* Center horizontally */
+        font-size: 20px;
+    }
+
+    
+    .col-3{
+        flex-basis: 20%;
+        text-align: center; /* Center align content in all columns */
+        margin: 0 auto; /* Center horizontally */
+        font-size: 20px;
+    }
+
+    
+    .col-4 {
+        flex-basis: 20%;
+        text-align: center; /* Center align content in all columns */
+        margin: 0 auto; /* Center horizontally */
+        font-size: 20px;
+    }
+
+    @media all and (max-width: 767px) {
+        .table-header {
+            display: none;
+        }
+        
+
+        li {
+            display: block;
+        }
+
+        .col {
+            text-align: center;
+            flex-basis: 100%;
+        }
+
+        .col {
+            display: flex;
+            padding: 10px 0;
+            text-align: center;
+
+            &:before {
+                color: #6C7A89;
+                padding-right: 10px;
+                content: attr(data-label);
+                flex-basis: 50%;
+                text-align: center;
+            }
+        }
+    }
+
