--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     th{
         font-family: 'Titillium Web', sans-serif;
     }
+    background-color: #27374D;
+    color: #DDE6ED;
 }
 
 .container {
@@ -54,7 +56,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 150px;
     border: 1px solid #ccc; /* Remember to delete */
 }
 
@@ -66,10 +68,11 @@ h2 {
         justify-content: space-between;
         align-items: center; /* Center vertically within row */
         margin-bottom: 25px;
+        background-color: #526D82
     }
 
     .table-header {
-        background-color: #95A5A6;
+        background: #526D82;
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 0.03em;
@@ -80,6 +83,7 @@ h2 {
     .table-row {
         background-color: #ffffff;
         box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+        
     }
 
     .col-1,
@@ -132,6 +136,7 @@ h2 {
         display: flex; /* Center vertically within row */
         align-items: center; /* Center vertically within row */
         margin-bottom: 25px;
+        color:#27374D;
     }
     ul {
         border-radius: 3px;
@@ -144,7 +149,7 @@ h2 {
        
     }
     .table-header {
-        background-color: #95A5A6;
+        background-color: #526D82;
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 0.03em;
@@ -153,7 +158,7 @@ h2 {
     }
 
     .table-row {
-        background-color: #ffffff;
+        background-color: #9DB2BF;
         box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
     }
 
@@ -199,7 +204,7 @@ h2 {
 }
 
 th{
-    background-color: #95A5A6;
+    background-color: #526D82;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
@@ -231,6 +236,7 @@ td{
     padding-top: 25px;
     padding-bottom: 25px;
     
+    
 }
 
 .update-input{
@@ -241,7 +247,91 @@ td{
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
     border:0;
     outline:0;
+    text-align: center;
+    background-color: #9DB2BF;
+    margin-bottom:10px;
 }
 ::placeholder{
     text-align: center;
+}
+
+
+
+/* CSS */
+button{
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 200px;
+}
+
+button:hover {
+  background-color: #f7fafa;
+}
+
+button:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
+
+
+/* CSS */
+.button-13 {
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.button-13:hover {
+  background-color: #f7fafa;
+}
+
+.button-13:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
+.logout-button{
+    text-align: right;
+}
+
+.index-body{
+    height: 2000px;
+}
+.login-form{
+    height: 400px;
 }
