--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Titillium Web', sans-serif;
+    margin:0px;
     ul{
         padding-inline-start:0;
     }
@@ -9,6 +10,7 @@ body {
     }
     background-color: #27374D;
     color: #DDE6ED;
+    height: max;
 }
 
 .container {
@@ -20,7 +22,16 @@ body {
 }
 
 h2 {
-    font-size: 26px;
+    font-size: 32px;
+    margin: 20px 0;
+    text-align: center;
+
+    small {
+        font-size: 0.5em;
+    }
+}
+h3 {
+    font-size: 25px;
     margin: 20px 0;
     text-align: center;
 
@@ -38,7 +49,7 @@ h2 {
 }
 
 .info-table th, .info-table td {
-    border: 2px solid #dddddd;
+    border: 2px solid #DDE6ED;
     text-align: center; /* Center align content in all columns */
     padding: 8px;
 }
@@ -57,22 +68,26 @@ h2 {
     justify-content: center;
     align-items: center;
     height: 150px;
-    border: 1px solid #ccc; /* Remember to delete */
+    background-color: #dddddd;
+    color:#27374D;
+    width:100%;
+    box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
 }
 
 .responsive-table {
     li {
         border-radius: 3px;
-        padding: 15px 30px;
+        padding: 22px 22px;
         display: flex; /* Center vertically within row */
         justify-content: space-between;
         align-items: center; /* Center vertically within row */
         margin-bottom: 25px;
-        background-color: #526D82
+        background-color: #526D82;
+        color:#27374D;
     }
 
     .table-header {
-        background: #526D82;
+        background-color: #526D82;
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 0.03em;
@@ -81,7 +96,7 @@ h2 {
     }
 
     .table-row {
-        background-color: #ffffff;
+        background-color: #9DB2BF;
         box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
         
     }
@@ -213,7 +228,7 @@ th{
     border-bottom:25px;
     padding-left: 43.8px;
     padding-right:43.8px;
-    
+    color:#27374D;
 }
 
 table th:first-child{
@@ -383,4 +398,7 @@ button:focus {
     opacity: 1;
   }
     
-  
+  .logout{
+    align-items: right;
+    justify-content: right;
+  }
