--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
         font-family: 'Titillium Web', sans-serif;
     }
     background-color: #27374D;
-    color: #DDE6ED;
+    color: #27374D;
     height: max;
 }
 
@@ -62,17 +62,7 @@ h3 {
     color: red;
 }
 
-.main-header {
-    font-size: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    background-color: #dddddd;
-    color:#27374D;
-    width:100%;
-    box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
-}
+
 
 .responsive-table {
     li {
@@ -229,15 +219,22 @@ th{
     padding-left: 43.8px;
     padding-right:43.8px;
     color:#27374D;
+    
+  
 }
 
 table th:first-child{
     border-radius: 3px 0 0 3px;
     
+    
+    
 }
+
 
 table th:last-child{
     border-radius: 0 3px 3px 0;
+    
+    box-shadow: 4 4px 0px rgba(0, 0, 0, 0.2);
 }
 
 table{
@@ -256,14 +253,14 @@ td{
 
 .update-input{
    
-    width:250px;
+    width:250px !important;
     height:45px;
     border-radius:5px;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
     border:0;
     outline:0;
     text-align: center;
-    background-color: #9DB2BF;
+    background-color: #9DB2BF !important;
     margin-bottom:10px;
 }
 ::placeholder{
@@ -399,6 +396,51 @@ button:focus {
   }
     
   .logout{
-    align-items: right;
-    justify-content: right;
+    
+    position:absolute;
+    top:17.5px;
+    right:20px;
+    padding: 7px;
   }
+
+  input[type=text] {
+    background-color:#dddddd;
+    border:none;
+    border-bottom: 3px solid #27374D;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    font-size: 15px;
+    color: #27374D;
+    width:30px;
+  }
+  input[type=text]:focus {
+    border-bottom: 5px solid #27374D;
+    -webkit-transition: 0.1s;
+    transition: 0.1s;
+    width:200px;
+  }
+  .backing{
+    background-color:#dddddd;
+    width:50%;
+    height:1166px;
+    position:absolute;
+    left:25%;
+    top:10%;
+    
+    margin-right:25%;
+  }
+  .main-header {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    background-color: #dddddd;
+    color:#27374D;
+    position: absolute;
+    top:-12.8%;
+    left:-50%;
+    width:2560px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
