--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ button:focus {
     outline: none;
     font-size: 15px;
     color: #27374D;
-    width:30px ;
+    width:200px ;
   }
   .search-bar:focus {
     border-bottom: 5px solid #27374D;
@@ -444,3 +444,39 @@ button:focus {
     width:2560px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
+
+.dropbtn {
+    background-color: #dddddd;
+    color: #27374D;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px; /* Rounded corners */
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+
+  select {
+    color: #333; /* Text color */
+    background-color: #fff; /* Background color */
+    font-size: 16px; /* Font size */
+    font-family: Arial, sans-serif; /* Font family */
+    padding: 10px; /* Padding */
+    border: 1px solid #ccc; /* Border */
+    border-radius: 5px; /* Rounded corners */
+    outline: none; /* Remove outline */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Box shadow */
+    cursor: pointer; /* Cursor */
+    width: 200px; /* Width */
+  }
+  
+  
